2001-06-20  Dan Espen  <dane@mk.telcordia.com>

	* index.html: News about fvwm.org's status.

2001-05-10  Mikhael Goikhman  <migo@homemail.com>

	* generated/{FAQ,NEWS}.html: regenerated

2001-05-04  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* download.html, index.html: update for 2.3.32.

2001-05-01  Dan Espen  <dane@mk.telcordia.com>

	* generated/FAQ.html: Regenerated FAQ.

2001-04-16  Dan Espen  <dane@mk.telcordia.com>

	* index.html: 
	* download.html: Typos.

2001-04-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html, index.html: News Flash, download 2.3.31.

2001-03-30  Mikhael Goikhman  <migo@homemail.com>

	* download.html: replaced rpm link
	* index.html: actually updated News Flash and date
	* generated/NEWS.html: regenerated

2001-03-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html, index.html: News Flash, download 2.3.30.

2001-03-18  Dan Espen  <dane@mk.telcordia.com>

	* generated/FAQ.html: Regenerate FAQ.

2001-03-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html, index.html: News Flash, download 2.3.29.

2001-02-26  Dan Espen  <dane@mk.telcordia.com>

	* generated/NEWS.html: Regenerate NEWS, FAQ, AUTHORS, man pages.

2001-02-25  Dan Espen  <dane@mk.telcordia.com>

	* download.html, index.html: News flash, download 2.2.5.

2001-01-25  Dan Espen  <dane@mk.telcordia.com>

	* download.html, index.html: News Flash, download 2.3.28.

2001-01-20  Dan Espen  <dane@mk.telcordia.com>

	* vector-buttons/DecorDemo1-4.fvwmrc/gif: Hide the handles.
	* vector-buttons/testbed.fvwmrc: Update grab instructions to account
	for windowshading.

2001-01-21  Mikhael Goikhman  <migo@homemail.com>

	* vector-buttons/testbed.fvwmrc:
	It is impossible now to get title width 0 (only buttons), so
	add a full title "button_demo_style", more improvements.
	Added stop_button_demo function,
	* vector-buttons/DecorDemo[1-4].fvwmrc:
	Since title is displayed now, fix TitleStyle definitions.
	* vector-buttons/DecorDemo[1-4].gif:
	recreated gifs
