@@ -17,9 +17,9 @@ Latest Stable Release (<b>2.2.5</b>):
 <a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.2.5.tar.gz">tar.gz</a></li>
 
 <li>
-Latest Beta Release (<b>2.3.32</b>):
-<a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.3.32.tar.gz">tar.gz</a>,
-<a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.3.32.tar.bz2">tar.bz2</a></li>
+Latest Beta Release (<b>2.3.33</b>):
+<a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.3.33.tar.gz">tar.gz</a>,
+<a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.3.33.tar.bz2">tar.bz2</a></li>
 
 <li>
 Latest Alpha Versions:
