@@ -31,7 +31,7 @@ get things running again.   Currently all fvwm.org services are up and
 running and will be for the foreseeable future.
 <p>
 <!--FVWM 2.4.0, an official release, is now available for download!-->
-FVWM 2.3.32, a stable candidate release is now available for download!
+FVWM 2.3.33, a stable candidate release is now available for download!
 </blockquote>
 <hr>
 
