@@ -1,3 +1,7 @@
+2001-06-22  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* download.html, index.html: News Flash, download 2.3.33.
+
 2001-06-20  Dan Espen  <dane@mk.telcordia.com>
 
 	* index.html: News about fvwm.org's status.
@@ -16,7 +20,7 @@
 
 2001-04-16  Dan Espen  <dane@mk.telcordia.com>
 
-	* index.html: 
+	* index.html:
 	* download.html: Typos.
 
 2001-04-08  Dominik Vogt  <dominik.vogt@gmx.de>
